src/theme/AnnouncementBar/styles.module.css
:root {
  --docusaurus-announcement-bar-height: auto;
}

.announcementBar {
  display: flex;
  align-items: center;
  height: var(--docusaurus-announcement-bar-height);

  background: linear-gradient(
    135deg,
    var(--lavender-blue) 0%,
    var(--lavender-blue-tertiary) 10%,
    var(--pink-lace) 20%,
    var(--aero-blue) 30%,
    var(--shandy) 40%,
    var(--lavender-blue) 50%,
    var(--lavender-blue-tertiary) 60%,
    var(--pink-lace) 70%,
    var(--aero-blue) 80%,
    var(--shandy) 90%,
    var(--lavender-blue) 100%
  );
  background-size: 200% 200%;
  animation: gradientShift 10s linear infinite;

  /*
  Unfortunately we can't make announcement bar render above the navbar
  IE need to use border-bottom instead of shadow
  See https://github.com/facebookincubator/infima/issues/275

  box-shadow: var(--ifm-global-shadow-lw);
  z-index: calc(var(--ifm-z-index-fixed) + 1);
  */
  border-bottom: 1px solid var(--ifm-color-emphasis-100);
}

.announcementBar > div {
  color: black;
}

div[class*="announcementBar_"][role="banner"] a {
  font-weight: bold;
  color: black;
}

:root {
  --shandy: #fbe99a;
  --aero-blue: #d5ffed;
  --pink-lace: #ffd5f5;
  --lavender-blue-tertiary: #c4cdff;
  --lavender-blue: #8694ff;
}

@keyframes gradientShift {
  0% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0 50%;
  }
}

html[data-announcement-bar-initially-dismissed="true"] .announcementBar {
  display: none;
}

.announcementBarPlaceholder {
  flex: 0 0 10px;
}

.announcementBarClose {
  flex: 0 0 30px;
  align-self: stretch;
}

.announcementBarContent {
  flex: 1 1 auto;
}

@media print {
  .announcementBar {
    display: none;
  }
}

@media (min-width: 960px) {
  div[class*="announcementBar_"][role="banner"] {
    padding-top: 0;
  }
}

@media (min-width: 997px) {
  :root {
    --docusaurus-announcement-bar-height: 30px;
  }

  .announcementBarPlaceholder,
  .announcementBarClose {
    flex-basis: 50px;
  }
}

